--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "art & dani",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2"
   }
 }
