--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "converts handlebar to lodash syntax",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha && npm run eslint",
+    "eslint": "./node_modules/.bin/eslint ./"
   },
   "keywords": [
     "lodash",
@@ -15,6 +16,11 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.1",
     "mocha": "^3.0.2"
   }
 }
