--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.1",
+    "growl": "^1.10.2",
     "mocha": "^3.0.2"
   }
 }
