--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.1",
     "mocha": "^3.0.2"
-  }
+  },
+  "heroku-run-build-script": true
 }
